--- a/idp/backstage/backstage-portfolio/app-config.yaml
+++ b/idp/backstage/backstage-portfolio/app-config.yaml
@@ -1,9 +1,9 @@
 app:
-  title: Scaffolded Backstage App
+  title: Backstage Portfolio
   baseUrl: http://localhost:3000
 
 organization:
-  name: My Company
+  name: LHJ
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
@@ -76,33 +76,27 @@ catalog:
     entityFilename: catalog-info.yaml
     pullRequestBranchName: backstage-integration
   rules:
-    - allow: [Component, System, API, Resource, Location]
+    - allow: [Component, System, API, Resource, Location, Template, Group]
   locations:
-    # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
-
-    # Local example template
+      target: ../catalog-entities/all.yaml
     - type: file
-      target: ../../examples/template/template.yaml
-      rules:
-        - allow: [Template]
-
-    # Local example organizational data
+      target: ../catalog-entities/templates.yaml
     - type: file
-      target: ../../examples/org.yaml
-      rules:
-        - allow: [User, Group]
+      target: ../catalog-entities/users.yaml
 
-    ## Uncomment these lines to add more example data
-    # - type: url
-    #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
+  # locations:
+  #   - type: url
+  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/all.yaml
+  #   - type: url
+  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/templates.yaml
+  #   - type: url
+  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/users.yaml
 
-    ## Uncomment these lines to add an example org
-    # - type: url
-    #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
-    #   rules:
-    #     - allow: [User, Group]
+# integrations:
+#   github:
+#     - host: github.com
+#       token: ${GH_TOKEN}
 
 kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
