--- a/idp/backstage/backstage-portfolio/app-config.production.yaml
+++ b/idp/backstage/backstage-portfolio/app-config.production.yaml
@@ -36,20 +36,13 @@ catalog:
   # Overrides the default list locations from app-config.yaml as these contain example data.
   # See https://backstage.io/docs/features/software-catalog/#adding-components-to-the-catalog for more details
   # on how to get entities into the catalog.
+
+  rules:
+    - allow: [Component, System, Resource, Location, Template, Group]
   locations:
-    # Local example data, replace this with your production config, these are intended for demo use only.
-    # File locations are relative to the backend process, typically in a deployed context, such as in a Docker container, this will be the root
-    - type: file
-      target: ./examples/entities.yaml
-
-    # Local example template
-    - type: file
-      target: ./examples/template/template.yaml
+    - type: url
+      target: https://github.com/juu0000/portfolio/blob/develop/idp/backstage/catalog-entities/all.yaml
+    - type: url
+      target: https://github.com/juu0000/portfolio/blob/develop/idp/backstage/catalog-entities/users.yaml
       rules:
-        - allow: [Template]
-
-    # Local example organizational data
-    - type: file
-      target: ./examples/org.yaml
-      rules:
-        - allow: [User, Group]
+        - allow: [User]
