--- a/idp/backstage/backstage-portfolio/app-config.yaml
+++ b/idp/backstage/backstage-portfolio/app-config.yaml
@@ -36,6 +36,19 @@ backend:
     connection: ':memory:'
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
+home:
+  # https://github.com/backstage/backstage/blob/master/plugins/home/README.md#page-visit-homepage-component-homepagetopvisited--homepagerecentlyvisited
+  recentVisits:
+    filterBy:
+      - field: entityRef
+        operator: "contains"
+        value: "component"
+  topVisits:
+    filterBy:
+      - field: entityRef
+        operator: "contains"
+        value: "component"
+
 integrations:
   github:
     - host: github.com
@@ -80,7 +93,7 @@ catalog:
     entityFilename: catalog-info.yaml
     pullRequestBranchName: backstage-integration
   rules:
-    - allow: [Component, System, Resource, Location, Template, Group]
+    - allow: [Component, System, Resource, Location, Template, Group, API]
   locations:
     # - type: file
     #   target: ../../../catalog-entities/all.yaml
@@ -96,14 +109,6 @@ catalog:
       target: https://github.com/juu0000/portfolio/blob/develop/idp/backstage/catalog-entities/users.yaml
       rules:
         - allow: [User]
-
-  # locations:
-  #   - type: url
-  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/all.yaml
-  #   - type: url
-  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/templates.yaml
-  #   - type: url
-  #     target: https://github.com/backstage-portfolio/blob/main/idp/backstage/catalog-entities/users.yaml
 
 kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
