feat(backstage): new software-template for s3 and ec2

--- a/idp/backstage/software-templates/templates.yaml
+++ b/idp/backstage/software-templates/templates.yaml
@@ -9,3 +9,4 @@ spec:
     - ./scaffolder-templates/create-nodejs-app/template.yaml
     - ./scaffolder-templates/create-argocd-app/template.yaml
     - ./scaffolder-templates/create-aws-s3/template.yaml
+    - ./scaffolder-templates/create-aws-ec2/template.yaml
