--- a/idp/backstage/software-templates/scaffolder-templates/create-aws-ec2/template.yaml
+++ b/idp/backstage/software-templates/scaffolder-templates/create-aws-ec2/template.yaml
@@ -1,42 +1,43 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: aws-s3-template
-  title: Create a AWS S3
-  description: AWS S3 버킷을 생성해주는 템플릿 입니다.
+  name: aws-ec2-template
+  title: Create a AWS EC2
+  description: AWS EC2 인스턴스를 생성해주는 템플릿 입니다.
   tags:
     - aws
-    - s3
+    - ec2
 spec:
   owner: team-devops
   system: lhj-idp
   type: aws
 
   parameters:
-    - title: 새 AWS S3에 대한 정보를 입력해주세요.
+    - title: 새로 만들 AWS EC2에 대한 정보를 입력해주세요.
       required:
-        - s3Name
-        - acl
+        - ec2Name
+        - instanceType
         - tags
       properties:
-        s3Name:
-          title: S3 Name
+        ec2Name:
+          title: EC2 Name
           type: string
-          description: S3 버킷 이름을 입력합니다.
+          description: EC2 인스턴스 이름을 입력합니다.
         description:
           title: Description
           type: string
-          description: S3 버킷 설명을 입력합니다.
-        acl:
-          title: S3 ACL
+          description: EC2 인스턴스 설명을 입력합니다.
+        instanceType:
+          title: Instance Type
+          description: EC2 인스턴스 유형을 입력합니다.
           type: string
-          description: S3 버킷 접근 제어 권한을 입력합니다.
+          default: t2.micro
           enum:
-            - private
-            - public-read
-            - public-read-write
-            - aws-exec-read
-            - authenticated-read
+            - t2.micro
+            - t3.small
+          enumNames:
+            - '가장 낮은 성능 t2.micro'
+            - '중간 성능 t3.small'
         tags:
           title: Owner
           type: string
@@ -48,54 +49,61 @@ spec:
         environment:
           title: Environment
           description: 생성할 환경을 선택합니다.
-          type: array
+          type: string
           default: dev
-          minItems: 1
-          items:
-            type: string
-            enum:
-              - dev
-              - prod
+          enum:
+            - dev
+            - prod
           uniqueItems: true
-          ui:widget: checkboxes
+          ui:widget: radio
 
   steps:
     - id: fetch-vars
       name: Fetch S3 terraform variables
       action: fetch:plain
       input:
-        url: https://github.com/juu0000/portfolio/blob/develop/iac/terraform/s3/env
-        targetPath: iac/terraform/s3/env
+        url: https://github.com/juu0000/portfolio/blob/develop/iac/terraform/ec2/env
+        targetPath: iac/terraform/ec2/env
 
     - id: merge-vars-dev
-      name: Merge S3 terraform variables for dev
+      name: Merge EC2 terraform variables for dev
       if: ${{ parameters.environment.includes('dev') }}
       action: roadiehq:utils:merge
       options:
         mergeArrays: true
       input:
-        path: iac/terraform/s3/env/dev.yaml
+        path: iac/terraform/ec2/env/dev.yaml
         mergeArrays: true
         content:
-          buckets:
-            - name: ${{ parameters.s3Name }}
-              acl: ${{ parameters.acl }}
+          ec2_instances:
+            - name: ${{ parameters.ec2Name }}
+              instance_type: ${{ parameters.instanceType }}
+              key_name: ${{ parameters.ec2Name }}-key
+              monitoring: false
+              vpc_security_group_ids:
+                - sg-12345678
+              subnet_id: subnet-eddcdzz4
               tags:
                 Owner: ${{ parameters.tags }}
 
     - id: merge-vars-prod
-      name: Merge S3 terraform variables for prod
+      name: Merge EC2 terraform variables for prod
       if: ${{ parameters.environment.includes('prod') }}
       action: roadiehq:utils:merge
       options:
         mergeArrays: true
       input:
-        path: iac/terraform/s3/env/prod.yaml
+        path: iac/terraform/ec2/env/prod.yaml
         mergeArrays: true
         content:
-          buckets:
-            - name: ${{ parameters.s3Name }}
-              acl: ${{ parameters.acl }}
+          ec2_instances:
+            - name: ${{ parameters.ec2Name }}
+              instance_type: ${{ parameters.instanceType }}
+              key_name: ${{ parameters.ec2Name }}
+              monitoring: false
+              vpc_security_group_ids:
+                - sg-87654321
+              subnet_id: subnet-xyzabcd
               tags:
                 Owner: ${{ parameters.tags }}
 
@@ -105,10 +113,10 @@ spec:
       input:
         url: ../../skeletons/catalog-entities/resource/
         values:
-          name: ${{ parameters.s3Name }}
-          type: s3
+          name: ${{ parameters.ec2Name }}
+          type: ec2
           owner: ${{ parameters.tags }}
-          system: aws-s3
+          system: aws-ec2
           description: ${{ parameters.description }}
         targetPath: catalog-entities/resources/
 
@@ -119,7 +127,7 @@ spec:
         repoUrl: github.com?owner=juu0000&repo=portfolio
         branchName: infra
         title: Create Terraform files
-        description: 새로운 S3 버킷을 위한 Terraform 코드를 생성합니다.
+        description: 새로운 EC2 인스턴스를 생성하기 위한 Terraform 코드를 생성합니다.
 
   output:
     links:
